[package]
name = "currency_rs_isotoxal"
version = "1.1.3"
edition = "2021"
authors = ["Adel-ak", "IsotoxalDev"]
description = "A rust library for handling currencies uses less lifetimes and more data on heap use currency_rs if you need"
homepage = "https://github.com/Adel-ak/currency_rs"
license-file = "LICENSE.txt"
readme = "README.md"
documentation = "https://docs.rs/currency_rs/latest/currency_rs"
repository = "https://github.com/Adel-ak/currency_rs"
keywords = ["currency", "money", "utilities", "precision", "decimal"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fancy-regex = "0.11.0"
